C3 version history
--------------------------------

Version 6.2.6 (02.02.2022)
- PREPARED: Checking on a logging issue

Version 6.2.5 (01.02.2022)
- ADDED: A number of additional stats data to the database (from MWO API)
- ADDED: Column to link attack to a forum thread
- ADDED: Statistics data to the end of round stats
- PREPARED: Creation of a thread for each planetary attack (for roleplay and results)

Version 6.2.3 (30.01.2022)
- CHANGED: Buttons in invasion enable after points are displayed
- CHANGED: Dice pane disabled (for now)

Version 6.2.2 (29.01.2022)
- FIXED: Storing of statistics data
- FIXED: Mouse transparency of Tukayyid line (circle)
- FIXED: Unique constraint for attack and char stats added
- FIXED: MWO API got additional check for valid code (15 long, only numbers)
- FIXED: Clipboard will be cleared on first start of the monitoring
- FIXED: Roleplay sound clips during invasion should stop after the first run

Version 6.2.1 (27.01.2022)
- ADDED: Saving of attack and user statistiks from MWO API

Version 6.1.21 (26.01.2022)
- ADDED: New statistic tables and corresponding classes
- CHANGED: Renamed a number of tables
- CHANGED: Further improvements of update downloading

Version 6.1.20 (25.01.2022)
- ADDED: Data Access classes for STATS_MWO table
- ADDED: Saving of actual API values from MWO lobbies
- FIXED: Strings in download message translated to current locale

Version 6.1.19 (24.01.2022)
- CHANGED: While new installer is uploading download is prevented
- CHANGED: Included JVM parameter to allow for bigger images to be rendered in client

Version 6.1.17 (24.01.2022)
- UPDATED: Several libs
- ADDED: Log output of the module path to hunt down provider problems with lsf4j
- ADDED: Command line switch to clean will also delete downloaded installers
- FIXED: Logging on client does work again

Version 6.1.14 (23.01.2022)
- FIXED: Scope for slf4j provider at runtime

Version 6.1.11 (21.01.2022)
- ADDED: Circle on the map to mark the Tukayyid line