@@ -2,6 +2,14 @@
 # Java Util Logger (over slf4j)
 # --------------------------------------------------------
 
+# SEVERE
+# WARNING
+# INFO
+# CONFIG
+# FINE
+# FINER
+# FINEST
+
 handlers                                  = net.clanwolf.starmap.logging.C3LogHandler, java.util.logging.FileHandler
 
 # Formatter
@@ -9,17 +17,24 @@ java.util.logging.SimpleFormatter.format  = %1$tY.%1$tm.%1$td %1$tH:%1$tM:%1$tS 
 
 # LogHandler
 java.util.logging.C3LogHandler.formatter  = java.util.logging.SimpleFormatter
-java.util.logging.C3LogHandler.level      = INFO
+java.util.logging.C3LogHandler.level      = FINE
 
 # FileHandler
-#java.util.logging.FileHandler.pattern     = %h/java%u.log
 java.util.logging.FileHandler.formatter   = java.util.logging.SimpleFormatter
-java.util.logging.FileHandler.level       = INFO
+java.util.logging.FileHandler.level       = FINE
 
 # General loglevel
 .level                                    = INFO
 
 # Package based loglevel
-net.clanwolf.starmap                      = FINEST
-javafx.scene.layout                       = ERROR
-javafx.css                                = ERROR
+net.clanwolf.starmap.level                = FINEST
+
+org.hibernate.level                       = INFO
+org.hibernate.SQL.level                   = INFO
+org.hibernate.type.descriptor.sql.level   = WARNING
+org.hibernate.stat.level                  = WARNING
+org.hibernate.SQL_SLOW.level              = WARNING
+org.hibernate.cache.level                 = WARNING
+
+javafx.level                              = INFO
+jdk.event.security                        = INFO
