@@ -41,6 +41,11 @@
 	<!-- ########################################################################################################### -->
 
 	<dependencies>
+		<dependency>
+			<groupId>net.clanwolf.starmap</groupId>
+			<artifactId>net.clanwolf.starmap.logging</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<!-- Mail ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
 		<dependency>
 			<groupId>com.sun.mail</groupId>
@@ -50,7 +55,7 @@
 		<dependency>
 			<groupId>com.sun.activation</groupId>
 			<artifactId>jakarta.activation</artifactId>
-			<version>1.2.2</version>
+			<version>2.0.1</version>
 		</dependency>
 	</dependencies>
 </project>
