@@ -1,4 +1,6 @@
 module net.clanwolf.starmap.mail {
 	exports net.clanwolf.client.mail;
 	requires java.mail;
+	requires org.slf4j;
+	requires org.slf4j.jul;
 }
