@@ -71,7 +71,7 @@ public class EntityManagerHelper {
 		properties.put("hibernate.connection.is-connection-validation-required", "true");
 		properties.put("hibernate.connection.user", auth.getProperty("user"));
 		properties.put("hibernate.connection.password", auth.getProperty("password"));
-		properties.put("hibernate.show_sql", "false");
+		//properties.put("hibernate.show_sql", "true"); // Done in logging.properties!
 		properties.put("hibernate.format_sql", "true");
 
 		emf = Persistence.createEntityManagerFactory("starmap", properties);
