@@ -37,7 +37,7 @@
                 hibernate.hbm2ddl.auto=validate
                 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
                 hibernate.cache.use_second_level_cache=false
-                hibernate.show_sql=false
+				<!-- hibernate.show_sql=true: Done in logging.properties! -->
             </value>
         </property>
     </bean>
