@@ -1,4 +1,4 @@
 #!/bin/sh
 test -f /var/www/vhosts/clanwolf.net/httpdocs/apps/C3/server/C3-Server_shutdown.flag && exit
-ps -fC java | grep C3-Server- || /opt/jdk-17/bin/java -jar /var/www/vhosts/clanwolf.net/httpdocs/apps/C3/server/C3-Server-6.2.5.jar ; exit
+ps -fC java | grep C3-Server- || /opt/jdk-17/bin/java -jar /var/www/vhosts/clanwolf.net/httpdocs/apps/C3/server/C3-Server-6.2.6.jar ; exit
 exit
