@@ -30,14 +30,14 @@
 
 		<!-- Versions -->
 		<version.java>17</version.java>
-		<version.javafx>17.0.0.1</version.javafx>
+		<version.javafx>17.0.2</version.javafx>
 		<version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
 		<version.exec-maven-plugin>3.0.0</version.exec-maven-plugin>
 		<version.asm>9.2</version.asm>                                              <!-- 7.3.1       <-> 9.2         -->
 		<version.netty>4.1.72.Final</version.netty>
 		<version.spring>5.3.15</version.spring>                                     <!-- 5.3.11      <-> 5.3.13      -->
 		<version.spring-security-config>5.5.1</version.spring-security-config>
-		<version.hibernate>5.6.3.Final</version.hibernate>
+		<version.hibernate>5.6.4.Final</version.hibernate>
 		<version.mysql-connector>8.0.28</version.mysql-connector>
 		<version.slf4j>2.0.0-alpha6</version.slf4j>
 		<!-- hikariCP and hikari jars are on the server next to the server jar. -->
